RESOLVED FIXED20198
[Qt] Copy key sequence doesn't work in non-editable areas.
https://bugs.webkit.org/show_bug.cgi?id=20198
Summary [Qt] Copy key sequence doesn't work in non-editable areas.
Erik L. Bunce
Reported 2008-07-28 11:01:57 PDT
Can be demonstrated using QtLauncher from SVN r35408. 1) Navigate to any site. 2) Make a selection in a non-editable text area. Note that the Copy action is now enabled. 3) Use the local copy key sequence (CTRL+C, etc.) 4) Attempt to paste into your favorite text editor, note you'll get the previous clipboard contents since the copy will not have been performed. This is because it is only checked for in editorActionForKeyEvent(), the calling of which is inappropriate outside of editable areas.
Attachments
patch to add Copy handling for non-editable sections of a page. (1.04 KB, patch)
2008-07-28 11:04 PDT, Erik L. Bunce
hausmann: review+
Erik L. Bunce
Comment 1 2008-07-28 11:04:23 PDT
Created attachment 22524 [details] patch to add Copy handling for non-editable sections of a page.
Simon Hausmann
Comment 2 2008-08-04 02:38:14 PDT
Comment on attachment 22524 [details] patch to add Copy handling for non-editable sections of a page. Ahh, I ran into this bug a few times and I always wondered what it was, since I did not see it in my daily use of QtWebKit in Arora. But I realize that's only because the browser there has its own Copy handling. Thanks for the patch!
Simon Hausmann
Comment 3 2008-08-04 07:03:49 PDT
Landed in r35535
Note You need to log in before you can comment on or make changes to this bug.