2008-08-04  Erik Bunce  <elbunce@thehive.com>

Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=20198

        Allow Copy key sequence to work in non-editable areas.

Canonical link: https://commits.webkit.org/27953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35535 268f45cc-cd09-0410-ab3c-d52691b4dbfc